# proteus

./: .pre-commit-config.yaml  CHANGELOG.md  DEMO.MD  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
config_examples/: app.env  app.json  app.yaml  production.yaml
config_examples/output/: app.env  app.json
docs/: adapters.md  architecture.md  cli.md  developer_guide.md  formats.md  manager.md  readers.md  tests.md  writers.md
examples/: 01_basic_usage.py  02_merge_configs.py  03_translate.py  04_custom_format.py  05_modify_and_save.py  README.md  basic_usage.py  cli_demo.ps1  cli_demo.sh  merge_configs.py  translate.py
examples/configs/: app.toml  app.txt
examples/output/: app.toml  app_from_env.yaml  cli_demo.json  cli_merged.toml  custom_to_json.json  translated.toml  translated_back.yaml  updated_config.toml
src/proteus/: __init__.py  cli.py  core.py  exceptions.py
src/proteus/adapters/: __init__.py  base.py  env_adapter.py  json_adapter.py  toml_adapter.py  yaml_adapter.py
src/proteus/formats/: __init__.py  base_format.py  env_format.py  generic.py  json_format.py  toml_format.py  yaml_format.py
src/proteus/readers/: __init__.py  base.py  env_reader.py  generic.py  json_reader.py  toml_reader.py  yaml_reader.py
src/proteus/writers/: __init__.py  base.py  env_writer.py  generic.py  json_writer.py  toml_writer.py  yaml_writer.py
tests/: conftest.py  sample_data.py  test_adapters.py  test_dependency_injection.py  test_env_reader.py  test_env_writer.py  test_formats.py  test_json_reader.py  test_json_writer.py  test_manager.py  test_toml_reader.py  test_toml_writer.py  test_yaml_reader.py  test_yaml_writer.py
tests/integration/: test_cli.py  test_dependency_injection.py  test_formats.py  test_generic_format.py  test_manager.py  test_namespacing.py
tests/unit/adapters/: test_base_adapter.py  test_env_adapter.py  test_json_adapter.py  test_toml_adapter.py  test_yaml_adapter.py
tests/unit/readers/: test_env_reader.py  test_toml_reader.py
tests/unit/writers/: test_toml_writer.py
