[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proteus"
version = "0.1.0"
description = "Unified configuration management library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Luca Di Leo", email = "lucadileo70@gmail.com"}
]
keywords = ["configuration", "config", "settings", "yaml", "json", "design-patterns"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "bandit>=1.7.0",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/lucadileo9/proteus"
Documentation = "https://github.com/lucadileo9/proteus#readme"
Repository = "https://github.com/lucadileo9/proteus"
Issues = "https://github.com/lucadileo9/proteus/issues"

[tool.hatchling.build.targets.wheel]
packages = ["src/proteus"]

[tool.coverage.run]
source = ["src/proteus"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=proteus --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # Flake8 errors, warnings, and pyflakes
    "I",            # Isort
    "N",            # Naming
    "UP",           # Pyupgrade
    "B",            # Bugbear
    "C4",           # Comprehensions
    "T20",          # No print statements
    "SIM",          # Simplify
    "RET",          # Return statements
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]
"tests/*" = ["T201"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
